Work on getting the run-as-jar to work
Not completed, but tired of this for now, see: http://www.bepsays.com/2014/09/04/minify-before-you-uglify-you-stupid/

See #2

--- a/wikiboot-client/src/app/editor/wbCodeEditor.html
+++ b/wikiboot-client/src/app/editor/wbCodeEditor.html
@@ -13,9 +13,7 @@
     <div class="form-group">
 
         <button type="button" class="btn" ng-model="editor.state.readonly"
-                ng-click="editor.toggleReadOnly()"
-                popover="I appeared on mouse enter!" popover-trigger="mouseenter"
-                popover-placement="right">
+                ng-click="editor.toggleReadOnly()">
             <i class="fa fa-{{editor.state.readonly ? 'lock' : 'unlock'}} fa-fw"></i>
             {{editor.state.readonly
             ? 'Unlock' :
